# simple-alloy-agent

./: .env.example  .gitignore  README.md  alloy-tools.yaml  pyproject.toml
alloydb_agent/: .env.example  agent.py
